--- a/_source/LigaCancer/Views/Doctor/Index.cshtml
+++ b/_source/LigaCancer/Views/Doctor/Index.cshtml
@@ -1,16 +1,14 @@
 ﻿@model RVCC.Models.SearchModel.DoctorSearchModel
 @{
     ViewData["Title"] = "Médicos";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 @section styles{
     <environment names="Development">
-        <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
-        @*<link href="~/lib/datatables-buttons-bs4/css/buttons.bootstrap4.min.css" rel="stylesheet" />*@
+        <link href="~/dist/css/doctor.bundle.css" rel="stylesheet" />
     </environment>
     <environment exclude="Development">
-        <link href="~/dist/css/doctor.min.css" rel="stylesheet" asp-append-version="true" />
+        <link href="~/dist/css/doctor.bundle.css" asp-append-version="true" rel="stylesheet" />
     </environment>
 }
 
@@ -37,7 +35,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="card-block collapse show" id="filterCollapse">
+                            <div class="card-body collapse show" id="filterCollapse">
                                 <form id="searchForm">
                                     <div class="form-row form-group">
                                         <div class="col-lg-3">
@@ -64,14 +62,14 @@
                             <div class="card-header">
                                 <i class="fas fa-user-md"></i> Médicos
                             </div>
-                            <div class="card-block">
+                            <div class="card-body">
                                 <div class="form-inline float-right">
                                     <a id="addDoctorButton" asp-action="AddDoctor" data-title="Adicionar Médico" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
                                         <i class="fa fa-plus"></i> Adicionar Médico
                                     </a>
                                 </div>
 
-                                <table class="table table-bordered table-striped table-condensed text-center" id="doctorTable"></table>
+                                <table class="table table-bordered table-striped text-center" id="doctorTable"></table>
                             </div>
                         </div>
                     </div>
@@ -86,23 +84,14 @@
     <!-- /.conainer-fluid -->
 </main>
 
-<partial name="_Modal"  />
+<partial name="_Modal" />
 
 @section scripts
     {
-    <partial name="_ValidationScriptsPartial" />
     <environment names="Development">
-        <script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
-        <script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
-        @*<script src="~/lib/datatables-buttons/js/dataTables.buttons.min.js"></script>
-        <script src="~/lib/datatables-buttons-bs4/js/buttons.bootstrap4.min.js"></script>
-        <script src="~/lib/jszip/jszip.min.js"></script>
-        <script src="~/lib/pdfmake/pdfmake.min.js"></script>
-        <script src="~/lib/pdfmake/vfs_fonts.js"></script>
-        <script src="~/lib/datatables-buttons/js/buttons.html5.min.js"></script>*@
-        <script src="~/js/doctor.js"></script>
+        <script src="~/dist/js/doctor.bundle.js"></script>
     </environment>
     <environment exclude="Development">
-        <script src="~/dist/js/doctor.min.js" asp-append-version="true"></script>
+        <script src="~/dist/js/doctor.bundle.js" asp-append-version="true"></script>
     </environment>
 }
