--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -5,16 +5,13 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>@ViewData["Title"] - Rede Videirense de Combate ao Câncer</title>
+    <title>@ViewData["Title"] - RVCC</title>
 
     <environment names="Development">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" />
-        <link href="~/css/style.css" rel="stylesheet" />
-        <link href="~/css/custom.css" rel="stylesheet" />
+        <link href="~/dist/css/common.bundle.css" rel="stylesheet" />
     </environment>
     <environment exclude="Development">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" />
-        <link href="~/dist/css/main.min.css" rel="stylesheet" asp-append-version="true" />
+        <link href="~/dist/css/common.bundle.css" rel="stylesheet" asp-append-version="true" />
     </environment>
 
     @RenderSection("styles", required: false)
@@ -126,15 +123,12 @@
     </footer>
 
     <environment names="Development">
-        <script src="~/lib/jquery/jquery.min.js"></script>
-        <script src="~/js/coreui.min.js"></script>
-        <script src="~/lib/popper/umd/popper.min.js"></script>
-        <script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
-        <script src="~/lib/sweetalert2/sweetalert2.all.min.js"></script>
-        <script src="~/js/main.js"></script>
+        <script src="~/dist/js/vendors.bundle.js"></script>
+        <script src="~/dist/js/common.bundle.js"></script>
     </environment>
     <environment exclude="Development">
-        <script src="~/dist/js/main.min.js" asp-append-version="true"></script>
+        <script src="~/dist/js/vendors.bundle.js" asp-append-version="true"></script>
+        <script src="~/dist/js/common.bundle.js" asp-append-version="true"></script>
     </environment>
 
     @RenderSection("scripts", required: false)
