--- a/_source/LigaCancer/Views/Shared/_LayoutBase.cshtml
+++ b/_source/LigaCancer/Views/Shared/_LayoutBase.cshtml
@@ -2,31 +2,19 @@
 
 <html lang="pt-br">
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-142367311-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-142367311-1');
-    </script>
-
-    <base href="./">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta NAME="robots" CONTENT="noindex,nofollow">
-    <title>@ViewData["Title"] | Rede Videirense de Combate ao Câncer</title>
+    <title>@ViewData["Title"] | RVCC</title>
 
     <environment names="Development">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" />
-        <link href="~/css/style.css" rel="stylesheet" />
-        <link href="~/css/custom.css" rel="stylesheet" />
+        <link href="~/dist/css/common.bundle.css" rel="stylesheet" />
     </environment>
     <environment exclude="Development">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" />
-        <link href="~/dist/css/main.min.css" rel="stylesheet" asp-append-version="true" />
+        <link href="~/dist/css/common.bundle.css" rel="stylesheet" asp-append-version="true" />
     </environment>
+
+    @RenderSection("styles", required: false)
 </head>
 <body class="app flex-row align-items-center">
     <div class="container">
@@ -36,18 +24,14 @@
     </div>
 
     <environment names="Development">
-        <script src="~/lib/jquery/jquery.min.js"></script>
-        <script src="~/js/coreui.min.js"></script>
-        <script src="~/lib/popper/umd/popper.min.js"></script>
-        <script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
-        <script src="~/lib/sweetalert2/sweetalert2.all.min.js"></script>
-        <script src="~/js/main.js"></script>
+        <script src="~/dist/js/vendors.bundle.js"></script>
+        <script src="~/dist/js/common.bundle.js"></script>
     </environment>
     <environment exclude="Development">
-        <script src="~/dist/js/main.min.js" asp-append-version="true"></script>
+        <script src="~/dist/js/vendors.bundle.js" asp-append-version="true"></script>
+        <script src="~/dist/js/common.bundle.js" asp-append-version="true"></script>
     </environment>
 
     @RenderSection("scripts", required: false)
-
 </body>
 </html>
