--- a/_source/LigaCancer/Views/Patient/Partials/_PatientProfile.cshtml
+++ b/_source/LigaCancer/Views/Patient/Partials/_PatientProfile.cshtml
@@ -66,6 +66,11 @@
             <input asp-for="DateOfBirth" type="text" class="form-control"/>
             <span asp-validation-for="DateOfBirth" class="text-danger"></span>
         </div>
+        <div class="form-group col-md-6">
+            <label asp-for="JoinDate" class="control-label label-required"></label>
+            <input asp-for="JoinDate" type="text" class="form-control"/>
+            <span asp-validation-for="JoinDate" class="text-danger"></span>
+        </div>
         <div class="form-group col-md-6 pt-4">
             <div class="form-row mt-2">
                 <label class="switch switch-label switch-pill switch-success ml-2">
