#453 join field filter

--- a/_source/LigaCancer/Views/Patient/Index.cshtml
+++ b/_source/LigaCancer/Views/Patient/Index.cshtml
@@ -167,19 +167,28 @@
                                         </div>
 
                                         <div class="form-row form-group">
-
-                                                <div class="col-lg-3">
-                                                    <label asp-for="BirthdayDateFrom"></label>
-                                                    <input asp-for="BirthdayDateFrom" type="text" class="form-control" />
-                                                    <span asp-validation-for="BirthdayDateFrom" class="text-danger"></span>
-                                                </div>
-                                                <div class="col-lg-3">
-                                                    <label asp-for="BirthdayDateTo"></label>
-                                                    <input asp-for="BirthdayDateTo" type="text" class="form-control" />
-                                                    <span asp-validation-for="BirthdayDateTo" class="text-danger"></span>
-                                                </div>
-
+                                            <div class="col-lg-3">
+                                                <label asp-for="BirthdayDateFrom"></label>
+                                                <input asp-for="BirthdayDateFrom" type="text" class="form-control" />
+                                                <span asp-validation-for="BirthdayDateFrom" class="text-danger"></span>
+                                            </div>
+                                            <div class="col-lg-3">
+                                                <label asp-for="BirthdayDateTo"></label>
+                                                <input asp-for="BirthdayDateTo" type="text" class="form-control" />
+                                                <span asp-validation-for="BirthdayDateTo" class="text-danger"></span>
+                                            </div>
+                                            <div class="col-lg-3">
+                                                <label asp-for="JoinDateFrom"></label>
+                                                <input asp-for="JoinDateFrom" type="text" class="form-control" />
+                                                <span asp-validation-for="JoinDateFrom" class="text-danger"></span>
+                                            </div>
+                                            <div class="col-lg-3">
+                                                <label asp-for="JoinDateTo"></label>
+                                                <input asp-for="JoinDateTo" type="text" class="form-control" />
+                                                <span asp-validation-for="JoinDateTo" class="text-danger"></span>
+                                            </div>
                                         </div>
+
                                         <button type="reset" class="btn btn-secondary">
                                             <i class="fas fa-eraser"></i> Limpar
                                         </button>
