--- a/_source/LigaCancer/Views/Patient/Partials/_PatientInformation.cshtml
+++ b/_source/LigaCancer/Views/Patient/Partials/_PatientInformation.cshtml
@@ -3,7 +3,7 @@
 <div class="modal-body">
     <div class="form-row">
         <div class="form-group col-lg-12">
-            <label asp-for="TreatmentBeginDate" class="control-label label-required"></label>
+            <label asp-for="TreatmentBeginDate" class="control-label"></label>
             <input asp-for="TreatmentBeginDate" type="text" class="form-control" />
             <span asp-validation-for="TreatmentBeginDate" class="text-danger"></span>
         </div>
