#155 treatment place, cancer type, medicine and presences updated do use webpack

--- a/_source/LigaCancer/Areas/Identity/Pages/Account/Login.cshtml
+++ b/_source/LigaCancer/Areas/Identity/Pages/Account/Login.cshtml
@@ -9,7 +9,7 @@
     <div class="card-group">
         <div class="card p-4">
 
-            <form id="account" method="post" class="card-block">
+            <form id="account" method="post" class="card-body">
                 <div class="card-body">
                     <h1>Login</h1>
 
