--- a/_source/LigaCancer/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/_source/LigaCancer/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -24,7 +24,7 @@
                             <div class="card-header">
                                 <i class="fas fa-user-md"></i> Trocar senha
                             </div>
-                            <div class="card-block">
+                            <div class="card-body">
                                 <div class="row">
                                     <div class="col-md-12">
                                         <form id="changePasswordForm" method="post">
