--- a/_source/LigaCancer/Views/Doctor/Index.cshtml
+++ b/_source/LigaCancer/Views/Doctor/Index.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Médicos";
 }
 
-@section styles{
+@section styles {
     <environment names="Development">
         <link href="~/dist/css/doctor.bundle.css" rel="stylesheet" />
     </environment>
@@ -86,8 +86,7 @@
 
 <partial name="_Modal" />
 
-@section scripts
-    {
+@section scripts {
     <environment names="Development">
         <script src="~/dist/js/doctor.bundle.js"></script>
     </environment>
