--- a/_source/LigaCancer/Views/FileAttachment/Partials/_FileUpload.cshtml
+++ b/_source/LigaCancer/Views/FileAttachment/Partials/_FileUpload.cshtml
@@ -5,7 +5,7 @@
 
     <form asp-action="FileUpload" class="dropzone" method="post" id="dropzoneForm" enctype="multipart/form-data"></form>
 
-    <table id="attachmentsTable" class="table table-bordered table-striped table-condensed text-center"></table>
+    <table id="attachmentsTable" class="table table-bordered table-striped text-center"></table>
 
 </div>
 
