--- a/_source/LigaCancer/Views/Patient/Index.cshtml
+++ b/_source/LigaCancer/Views/Patient/Index.cshtml
@@ -42,7 +42,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="card-block collapse show" id="filterCollapse">
+                            <div class="card-body collapse show" id="filterCollapse">
                                 <form id="searchForm">
                                     <div>
                                         <div class="form-row form-group">
@@ -204,14 +204,14 @@
                             <div class="card-header">
                                 <i class="fa fa-male"></i> Pacientes
                             </div>
-                            <div class="card-block">
+                            <div class="card-body">
                                 <div class="form-inline float-right">
                                     <a id="addPatientButton" asp-action="AddPatientProfile" data-title="Adicionar Paciente" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
                                         <i class="fa fa-plus"></i> Adicionar Paciente
                                     </a>
                                 </div>
 
-                                <table class="table table-bordered table-striped table-condensed text-center" id="patientTable"></table>
+                                <table class="table table-bordered table-striped text-center" id="patientTable"></table>
                             </div>
                         </div>
                     </div>
