--- a/_source/LigaCancer/Views/User/Index.cshtml
+++ b/_source/LigaCancer/Views/User/Index.cshtml
@@ -39,7 +39,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="card-block collapse show" id="filterCollapse">
+                            <div class="card-body collapse show" id="filterCollapse">
                                 <form id="searchForm">
                                     <div class="form-row form-group">
                                         <div class="col-lg-3">
@@ -63,14 +63,14 @@
                             <div class="card-header">
                                 <i class="fas fa-users"></i> Usuários
                             </div>
-                            <div class="card-block">
+                            <div class="card-body">
                                 <div class="form-inline float-right">
                                     <a id="addUserButton" asp-action="AddUser" data-title="Adicionar Usuário" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
                                         <i class="fa fa-plus"></i> Adicionar Usuário
                                     </a>
                                 </div>
 
-                                <table class="table table-bordered table-striped table-condensed text-center" id="userTable"></table>
+                                <table class="table table-bordered table-striped text-center" id="userTable"></table>
                             </div>
                         </div>
                     </div>
