--- a/_source/LigaCancer/Views/FamilyMember/Partials/_Index.cshtml
+++ b/_source/LigaCancer/Views/FamilyMember/Partials/_Index.cshtml
@@ -3,7 +3,7 @@
 <div class="row">
     <div class="col-lg-12">
         <div class="card">
-            <div class="card-block">
+            <div class="card-body">
                 <input asp-for="PatientId" id="familyMemberPatientId" />
 
                 <div class="row">
@@ -30,7 +30,7 @@
                     </a>
                 </div>
 
-                <table class="table table-bordered table-striped table-condensed text-center" id="familyMemberTable"></table>
+                <table class="table table-bordered table-striped text-center" id="familyMemberTable"></table>
             </div>
         </div>
     </div>
