--- a/_source/LigaCancer/Views/Phone/Partials/_Index.cshtml
+++ b/_source/LigaCancer/Views/Phone/Partials/_Index.cshtml
@@ -3,7 +3,7 @@
 <div class="row">
     <div class="col-lg-12">
         <div class="card">
-            <div class="card-block">
+            <div class="card-body">
                 <input asp-for="PatientId" id="phonePatientId" />
                 <div class="form-inline float-right">
                     <a id="addPhoneButton" asp-action="AddPhone" asp-controller="Phone" asp-route-id="@Model.PatientId" data-title="Adicionar Telefone" class="btn btn-primary"
@@ -12,7 +12,7 @@
                     </a>
                 </div>
 
-                <table class="table table-bordered table-striped table-condensed text-center" id="phoneTable"></table>
+                <table class="table table-bordered table-striped text-center" id="phoneTable"></table>
             </div>
         </div>
     </div>
