--- a/_source/LigaCancer/Views/Presence/Partials/_AddPresence.cshtml
+++ b/_source/LigaCancer/Views/Presence/Partials/_AddPresence.cshtml
@@ -1,20 +1,14 @@
 ﻿@model RVCC.Models.FormModel.PresenceFormModel
 
-<form id="addPresenceForm" asp-action="AddPresence"
-      role="form"
-      data-ajax="true"
-      data-ajax-method="POST"
-      data-ajax-failure="error"
-      data-ajax-success="addSuccess"
-      data-ajax-loading="#submitSpinner">
+<form id="addPresenceForm" asp-action="AddPresence" method="post">
 
     <div class="modal-body form-horizontal">
         <div class="form-group">
             <label asp-for="PatientId" class="control-label label-required"></label>
-            <select asp-for="PatientId" asp-items="Model.Patients" class="select2 form-control" 
-                    data-theme="bootstrap" 
-                    data-language="pt-BR" 
-                    data-placeholder="Paciente" 
+            <select asp-for="PatientId" asp-items="Model.Patients" class="select2 form-control"
+                    data-theme="bootstrap"
+                    data-language="pt-BR"
+                    data-placeholder="Paciente"
                     data-allow-clear="true">
                 <option value=""></option>
             </select>
@@ -22,17 +16,24 @@
         </div>
         <div class="form-group">
             <label asp-for="Date" class="control-label label-required"></label>
-            <input asp-for="Date" type="text" class="form-control"/>
+            <input asp-for="Date" type="text" class="form-control" data-date-end-date="0d" />
             <span asp-validation-for="Date" class="text-danger"></span>
         </div>
         <div class="form-group">
             <label asp-for="Time" class="control-label label-required"></label>
-            <input asp-for="Time" readonly type="text" class="form-control dateField"/>
+            <div class="input-group date" id="timePicker" data-target-input="nearest">
+                <input asp-for="Time" type="text" class="form-control datetimepicker-input" data-target="#timePicker" />
+                <div class="input-group-append" data-target="#timePicker" data-toggle="datetimepicker">
+                    <div class="input-group-text">
+                        <i class="far fa-clock"></i>
+                    </div>
+                </div>
+            </div>
             <span asp-validation-for="Time" class="text-danger"></span>
         </div>
 
     </div>
 
-    <partial name="_ModalFooter"  />
+    <partial name="_ModalFooter" />
 
 </form>
