--- a/_source/LigaCancer/Views/TreatmentPlace/Index.cshtml
+++ b/_source/LigaCancer/Views/TreatmentPlace/Index.cshtml
@@ -1,16 +1,14 @@
 ﻿@model RVCC.Models.SearchModel.TreatmentPlaceSearchModel
 @{
     ViewData["Title"] = "Cidades";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@section styles{
+@section styles {
     <environment names="Development">
-        <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
-        @*<link href="~/lib/datatables-buttons-bs4/css/buttons.bootstrap4.min.css" rel="stylesheet" />*@
+        <link href="~/dist/css/treatment-place.bundle.css" rel="stylesheet" />
     </environment>
     <environment exclude="Development">
-        <link href="~/dist/css/treatment-place.min.css" rel="stylesheet" asp-append-version="true" />
+        <link href="~/dist/css/treatment-place.bundle.css" asp-append-version="true" rel="stylesheet" />
     </environment>
 }
 
@@ -37,7 +35,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="card-block collapse show" id="filterCollapse">
+                            <div class="card-body collapse show" id="filterCollapse">
                                 <form id="searchForm">
                                     <div class="form-row form-group">
                                         <div class="col-lg-3">
@@ -56,19 +54,19 @@
                                 </form>
                             </div>
                         </div>
-                        
+
                         <div class="card">
                             <div class="card-header">
                                 <i class="fa fa-hospital-alt"></i> Cidades
                             </div>
-                            <div class="card-block">
+                            <div class="card-body">
                                 <div class="form-inline float-right">
                                     <a id="addTreatmentPlaceButton" asp-action="AddTreatmentPlace" data-title="Adicionar Cidade" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
                                         <i class="fa fa-plus"></i> Adicionar Cidade
                                     </a>
                                 </div>
 
-                                <table class="table table-bordered table-striped table-condensed text-center" id="treatmentPlaceTable"></table>
+                                <table class="table table-bordered table-striped text-center" id="treatmentPlaceTable"></table>
                             </div>
                         </div>
                     </div>
@@ -83,23 +81,13 @@
     <!-- /.conainer-fluid -->
 </main>
 
-<partial name="_Modal"  />
+<partial name="_Modal" />
 
-@section scripts
-    {
-    <partial name="_ValidationScriptsPartial" />
+@section scripts {
     <environment names="Development">
-        <script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
-        <script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
-        @*<script src="~/lib/datatables-buttons/js/dataTables.buttons.min.js"></script>
-        <script src="~/lib/datatables-buttons-bs4/js/buttons.bootstrap4.min.js"></script>
-        <script src="~/lib/jszip/jszip.min.js"></script>
-        <script src="~/lib/pdfmake/pdfmake.min.js"></script>
-        <script src="~/lib/pdfmake/vfs_fonts.js"></script>
-        <script src="~/lib/datatables-buttons/js/buttons.html5.min.js"></script>*@
-        <script src="~/js/treatmentPlace.js"></script>
+        <script src="~/dist/js/treatment-place.bundle.js"></script>
     </environment>
     <environment exclude="Development">
-        <script src="~/dist/js/treatment-place.min.js" asp-append-version="true"></script>
+        <script src="~/dist/js/treatment-place.bundle.js" asp-append-version="true"></script>
     </environment>
 }
