--- a/_source/LigaCancer/Views/TreatmentPlace/Partials/_EditTreatmentPlace.cshtml
+++ b/_source/LigaCancer/Views/TreatmentPlace/Partials/_EditTreatmentPlace.cshtml
@@ -1,12 +1,6 @@
 ﻿@model RVCC.Models.FormModel.TreatmentPlaceFormModel
 
-<form id="editTreatmentPlaceForm"  asp-action="EditTreatmentPlace"
-      role="form"
-      data-ajax="true"
-      data-ajax-method="POST"
-      data-ajax-failure="error"
-      data-ajax-success="editSuccess"
-      data-ajax-loading="#submitSpinner">
+<form id="editTreatmentPlaceForm"  asp-action="EditTreatmentPlace" method="post">
 
     <div class="modal-body form-horizontal">
         <partial name="Partials/_FormTreatmentPlace" />
