#155 Auth pages and user added webpack

--- a/_source/LigaCancer/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/_source/LigaCancer/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model AccessDeniedModel
 @{
-    ViewData["Title"] = "Acesso negado";
+    ViewData["Title"] = "Acesso Negado";
 }
 
 <main class="main">
@@ -17,6 +17,3 @@
     </div>
 </main>
 
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
