--- a/_source/LigaCancer/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/_source/LigaCancer/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -10,7 +10,7 @@
         <div class="card p-4">
             <h1>@ViewData["Title"]</h1>
             <p>
-                Obrigado por confirmar seu email.
+                Obrigado por confirmar seu email. <a asp-page="./Login">Clique aqui para entrar</a>.
             </p>
         </div>
     </div>
