--- a/_source/LigaCancer/Areas/Identity/Pages/Account/Lockout.cshtml
+++ b/_source/LigaCancer/Areas/Identity/Pages/Account/Lockout.cshtml
@@ -2,7 +2,7 @@
 @model LockoutModel
 @{
     Layout = "_LayoutBase";
-    ViewData["Title"] = "Bloqueada";
+    ViewData["Title"] = "Conta Bloqueada";
 }
 
 <div class="col-8">
