--- a/_source/LigaCancer/Views/User/Partials/_EditUser.cshtml
+++ b/_source/LigaCancer/Views/User/Partials/_EditUser.cshtml
@@ -1,12 +1,6 @@
 ﻿@model RVCC.Models.FormModel.EditUserFormModel
 
-<form id="editUserForm" asp-action="EditUser"
-      role="form"
-      data-ajax="true"
-      data-ajax-method="POST"
-      data-ajax-failure="error"
-      data-ajax-success="editSuccess"
-      data-ajax-loading="#submitSpinner">
+<form id="editUserForm" asp-action="EditUser" method="post">
 
     <div class="modal-body form-horizontal">
         <input asp-for="UserId" />
@@ -17,19 +11,13 @@
         </div>
         <div class="form-group">
             <label asp-for="Role" class="control-label"></label>
-            <select asp-for="Role" asp-items="Model.ApplicationRoles" class="form-control userSelect2" style="width: 100%" 
-                data-theme="bootstrap"
-                data-language="pt-BR"
-                data-placeholder="Regra"
-                data-width="resolve"
-                data-minimum-results-for-search="Infinity"
-                data-container-css-class="select2NoSearch">
+            <select asp-for="Role" asp-items="Model.ApplicationRoles" class="form-control">
                 <option value=""></option>
             </select>
             <span asp-validation-for="Role" class="text-danger"></span>
         </div>
     </div>
 
-    <partial name="_ModalFooter"  />
+    <partial name="_ModalFooter" />
 
 </form>
