--- a/_source/LigaCancer/Areas/Identity/Pages/Account/Login.cshtml
+++ b/_source/LigaCancer/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,11 +5,20 @@
     ViewData["Title"] = "Log in";
 }
 
+@section styles {
+    <environment names="Development">
+        <link href="~/dist/css/login.bundle.css" rel="stylesheet" />
+    </environment>
+    <environment exclude="Development">
+        <link href="~/dist/css/login.bundle.css" asp-append-version="true" rel="stylesheet" />
+    </environment>
+}
+
 <div class="col-md-6">
     <div class="card-group">
         <div class="card p-4">
 
-            <form id="account" method="post" class="card-body">
+            <form id="loginForm" method="post" class="card-body">
                 <div class="card-body">
                     <h1>Login</h1>
 
@@ -54,7 +63,10 @@
                             <a asp-page="./ForgotPassword">Esqueceu a senha?</a>
                         </div>
                         <div class="col-6 text-right">
-                            <button class="btn btn-primary px-4" type="submit">Login</button>
+                            <button class="btn btn-primary px-4" type="submit" id="btn-submit">
+                                Login
+                                <span id="submitSpinner" class="fa fa-spinner fa-pulse" style="display: none;"></span>
+                            </button>
                         </div>
                     </div>
 
@@ -64,13 +76,11 @@
     </div>
 </div>
 
-@section scripts
-    {
-    <partial name="_ValidationScriptsPartial" />
+@section scripts {
     <environment names="Development">
-        <script src="~/js/login.js"></script>
+        <script src="~/dist/js/login.bundle.js"></script>
     </environment>
     <environment exclude="Development">
-        <script src="~/dist/js/login.min.js" asp-append-version="true"></script>
+        <script src="~/dist/js/login.bundle.js" asp-append-version="true"></script>
     </environment>
 }
