--- a/_source/LigaCancer/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/_source/LigaCancer/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -2,7 +2,16 @@
 @model ChangePasswordModel
 
 @{
-    ViewData["Title"] = "Trocar senha";
+    ViewData["Title"] = "Alterar Senha";
+}
+
+@section styles {
+    <environment names="Development">
+        <link href="~/dist/css/change-password.bundle.css" rel="stylesheet" />
+    </environment>
+    <environment exclude="Development">
+        <link href="~/dist/css/change-password.bundle.css" asp-append-version="true" rel="stylesheet" />
+    </environment>
 }
 
 <main class="main">
@@ -74,13 +83,11 @@
     <!-- /.conainer-fluid -->
 </main>
 
-@section Scripts {
+@section scripts {
     <environment names="Development">
-        <partial name="_ValidationScriptsPartial" />
-        <script src="~/js/change-password.js"></script>
+        <script src="~/dist/js/change-password.bundle.js"></script>
     </environment>
     <environment exclude="Development">
-        <script src="~/dist/js/change-password.min.js" asp-append-version="true"></script>
+        <script src="~/dist/js/change-password.bundle.js" asp-append-version="true"></script>
     </environment>
-
 }
