--- a/_source/LigaCancer/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/_source/LigaCancer/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -5,13 +5,21 @@
     ViewData["Title"] = "Redefinir Senha";
 }
 
+@section styles {
+    <environment names="Development">
+        <link href="~/dist/css/reset-password.bundle.css" rel="stylesheet" />
+    </environment>
+    <environment exclude="Development">
+        <link href="~/dist/css/reset-password.bundle.css" asp-append-version="true" rel="stylesheet" />
+    </environment>
+}
+
 <div class="col-md-6">
     <div class="card-group">
         <div class="card p-4">
-            <form method="post">
+            <form id="resetPasswordForm" method="post">
                 <div class="card-body">
                     <h1>@ViewData["Title"]</h1>
-                    <h4>Redefina sua senha.</h4>
                     <input asp-for="ResetPassword.Code" type="hidden" />
 
                     <div class="form-group">
@@ -55,7 +63,10 @@
 
                     <div class="row">
                         <div class="col-12">
-                            <button type="submit" class="btn btn-primary float-right">Enviar</button>
+                            <button type="submit" class="btn btn-primary float-right">
+                                Enviar
+                                <span id="submitSpinner" class="fa fa-spinner fa-pulse" style="display: none;"></span>
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -65,12 +76,11 @@
     </div>
 </div>
 
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
+@section scripts {
     <environment names="Development">
-        <script src="~/js/reset-password.js"></script>
+        <script src="~/dist/js/reset-password.bundle.js"></script>
     </environment>
     <environment exclude="Development">
-        <script src="~/dist/js/reset-password.min.js" asp-append-version="true"></script>
+        <script src="~/dist/js/reset-password.bundle.js" asp-append-version="true"></script>
     </environment>
 }
