--- a/_source/LigaCancer/Views/User/Index.cshtml
+++ b/_source/LigaCancer/Views/User/Index.cshtml
@@ -1,18 +1,14 @@
 ﻿@model RVCC.Models.SearchModel.UserSearchModel
 @{
     ViewData["Title"] = "Usuários";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@section styles{
+@section styles {
     <environment names="Development">
-        <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
-        @*<link href="~/lib/datatables-buttons-bs4/css/buttons.bootstrap4.min.css" rel="stylesheet" />*@
-        <link href="~/lib/select2/theme/select2-bootstrap.min.css" rel="stylesheet" />
-        <link href="~/lib/select2/css/select2.min.css" rel="stylesheet" />
+        <link href="~/dist/css/user.bundle.css" rel="stylesheet" />
     </environment>
     <environment exclude="Development">
-        <link href="~/dist/css/user.min.css" rel="stylesheet" asp-append-version="true" />
+        <link href="~/dist/css/user.bundle.css" asp-append-version="true" rel="stylesheet" />
     </environment>
 }
 
@@ -87,23 +83,22 @@
 
 <partial name="_Modal" />
 
-@section scripts
-    {
-    <partial name="_ValidationScriptsPartial" />
+@section scripts {
+    @*<environment names="Development">
+            <script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
+            <script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
+            <script src="~/lib/select2/js/select2.full.min.js"></script>
+            <script src="~/lib/select2/js/i18n/pt-BR.js"></script>
+            <script src="~/js/user.js"></script>
+        </environment>
+        <environment exclude="Development">
+            <script src="~/dist/js/user.min.js" asp-append-version="true"></script>
+        </environment>*@
+
     <environment names="Development">
-        <script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
-        <script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
-        @*<script src="~/lib/datatables-buttons/js/dataTables.buttons.min.js"></script>
-        <script src="~/lib/datatables-buttons-bs4/js/buttons.bootstrap4.min.js"></script>
-        <script src="~/lib/jszip/jszip.min.js"></script>
-        <script src="~/lib/pdfmake/pdfmake.min.js"></script>
-        <script src="~/lib/pdfmake/vfs_fonts.js"></script>
-        <script src="~/lib/datatables-buttons/js/buttons.html5.min.js"></script>*@
-        <script src="~/lib/select2/js/select2.full.min.js"></script>
-        <script src="~/lib/select2/js/i18n/pt-BR.js"></script>
-        <script src="~/js/user.js"></script>
+        <script src="~/dist/js/user.bundle.js"></script>
     </environment>
     <environment exclude="Development">
-        <script src="~/dist/js/user.min.js" asp-append-version="true"></script>
+        <script src="~/dist/js/user.bundle.js" asp-append-version="true"></script>
     </environment>
 }
