--- a/_source/LigaCancer/Views/Medicine/Partials/_EditMedicine.cshtml
+++ b/_source/LigaCancer/Views/Medicine/Partials/_EditMedicine.cshtml
@@ -1,12 +1,6 @@
 ﻿@model RVCC.Models.FormModel.MedicineFormModel
 
-<form id="editMedicineForm" asp-action="EditMedicine"
-      role="form"
-      data-ajax="true"
-      data-ajax-method="POST"
-      data-ajax-failure="error"
-      data-ajax-success="editSuccess"
-      data-ajax-loading="#submitSpinner">
+<form id="editMedicineForm" asp-action="EditMedicine" method="post" >
 
     <div class="modal-body">
         <partial name="Partials/_FormMedicine" />
