#459 social assistance user permissions

--- a/_source/LigaCancer/Views/Address/Partials/_Index.cshtml
+++ b/_source/LigaCancer/Views/Address/Partials/_Index.cshtml
@@ -1,17 +1,20 @@
-﻿@model RVCC.Models.SearchModel.AddressSearchModel
+﻿@using RVCC.Business
+@model RVCC.Models.SearchModel.AddressSearchModel
 
 <div class="row">
     <div class="col-lg-12">
         <div class="card">
             <div class="card-block">
                 <input asp-for="PatientId" id="addressPatientId" />
-                <div class="form-inline float-right">
-                    <a id="addAddressButton" asp-action="AddAddress" asp-controller="Address" asp-route-id="@Model.PatientId" data-title="Adicionar Endereço" class="btn btn-primary"
-                       data-toggle="modal" data-target="#modal-action-secondary">
-                        <i class="fa fa-plus"></i> Adicionar Endereço
-                    </a>
-                </div>
-
+                @if (!User.IsInRole(Roles.SocialAssistance))
+                {
+                    <div class="form-inline float-right">
+                        <a id="addAddressButton" asp-action="AddAddress" asp-controller="Address" asp-route-id="@Model.PatientId" data-title="Adicionar Endereço" class="btn btn-primary"
+                           data-toggle="modal" data-target="#modal-action-secondary">
+                            <i class="fa fa-plus"></i> Adicionar Endereço
+                        </a>
+                    </div>
+                }
                 <table class="table table-bordered table-striped table-condensed text-center" id="addressTable"></table>
             </div>
         </div>
