--- a/_source/LigaCancer/Views/FamilyMember/Partials/_Index.cshtml
+++ b/_source/LigaCancer/Views/FamilyMember/Partials/_Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model RVCC.Models.SearchModel.FamilyMemberSearchModel
+﻿@using RVCC.Business
+@model RVCC.Models.SearchModel.FamilyMemberSearchModel
 
 <div class="row">
     <div class="col-lg-12">
@@ -23,12 +24,15 @@
 
                 <hr />
 
-                <div class="form-inline float-right">
-                    <a id="addFamilyMemberButton" asp-action="AddFamilyMember" asp-controller="FamilyMember" asp-route-id="@Model.PatientId" data-title="Adicionar Membro Familiar" class="btn btn-primary"
-                       data-toggle="modal" data-target="#modal-action-secondary">
-                        <i class="fa fa-plus"></i> Adicionar Membro Familiar
-                    </a>
-                </div>
+                @if (!User.IsInRole(Roles.SocialAssistance))
+                {
+                    <div class="form-inline float-right">
+                        <a id="addFamilyMemberButton" asp-action="AddFamilyMember" asp-controller="FamilyMember" asp-route-id="@Model.PatientId" data-title="Adicionar Membro Familiar" class="btn btn-primary"
+                           data-toggle="modal" data-target="#modal-action-secondary">
+                            <i class="fa fa-plus"></i> Adicionar Membro Familiar
+                        </a>
+                    </div>
+                }
 
                 <table class="table table-bordered table-striped table-condensed text-center" id="familyMemberTable"></table>
             </div>
