--- a/_source/LigaCancer/Views/Phone/Partials/_Index.cshtml
+++ b/_source/LigaCancer/Views/Phone/Partials/_Index.cshtml
@@ -1,16 +1,20 @@
-﻿@model RVCC.Models.SearchModel.PhoneSearchModel
+﻿@using RVCC.Business
+@model RVCC.Models.SearchModel.PhoneSearchModel
 
 <div class="row">
     <div class="col-lg-12">
         <div class="card">
             <div class="card-block">
                 <input asp-for="PatientId" id="phonePatientId" />
-                <div class="form-inline float-right">
-                    <a id="addPhoneButton" asp-action="AddPhone" asp-controller="Phone" asp-route-id="@Model.PatientId" data-title="Adicionar Telefone" class="btn btn-primary"
-                       data-toggle="modal" data-target="#modal-action-secondary">
-                        <i class="fa fa-plus"></i> Adicionar Telefone
-                    </a>
-                </div>
+                @if (!User.IsInRole(Roles.SocialAssistance))
+                {
+                    <div class="form-inline float-right">
+                        <a id="addPhoneButton" asp-action="AddPhone" asp-controller="Phone" asp-route-id="@Model.PatientId" data-title="Adicionar Telefone" class="btn btn-primary"
+                           data-toggle="modal" data-target="#modal-action-secondary">
+                            <i class="fa fa-plus"></i> Adicionar Telefone
+                        </a>
+                    </div>
+                }
 
                 <table class="table table-bordered table-striped table-condensed text-center" id="phoneTable"></table>
             </div>
